# MAGiQ-CombBLAS

./: .gitignore  CMakeLists.txt  README.MD  README.md  data.txt  synckw
3DSpGEMM/: GenRmatDist.h  Multiplier.h  ReadMatDist.h  Reductions.h  RestrictionOp.cpp  RestrictionOp.h  SUMMALayer.h  SplitMatDist.h  mpipspgemm.cpp  test_mpipspgemm.cpp
Applications/: BetwCent.cpp  CMakeLists.txt  DirOptBFS.cpp  FilteredBFS.cpp  FilteredMIS.cpp  SingleChildBFS.cpp  SpMMError.cpp  SpMult.cpp  TopDownBFS.cpp  TwitterEdge.h  gridtransposer.py
Applications/SpMSpV-IPDPS2017/: SpMSpVBench.cpp
BipartiteMatchings/: ApproxWeightPerfectMatching.cpp  ApproxWeightPerfectMatching.h  BPMaximalMatching.cpp  BPMaximalMatching.h  BPMaximumMatching.cpp  BPMaximumMatching.h  MatchingDefs.h  Utility.h  auction.cpp  gathertest.cpp
Ordering/: MD.cpp  MatPermuteSave.cpp  gathertest.cpp
ReleaseTests/: CMakeLists.txt  FindSparse.cpp  Galerkin.cpp  GalerkinNew.cpp  IndexingTest.cpp  IndexingTiming.cpp  IteratorTest.cpp  MultTest.cpp  MultTiming.cpp  ParIOTest.cpp  ReduceTest.cpp  Roofline.cpp  SpAsgnTest.cpp  SpAsgnTiming.cpp  SplitMergeTest.cpp  TransposeTest.cpp  VectorIO.cpp  VectorIOPermute.cpp  VectorIndexing.cpp  VectorTest.cpp
Shaheen-Results/shaheen-scripts/100k/: 128-nodes-1.sh  1k-nodes-1.sh  256-nodes-1.sh  2k-nodes-1.sh  32-nodes-1.sh  4k-nodes-1.sh  512-nodes-1.sh  8-nodes-1.sh  s256-nodes-1.sh
Shaheen-Results/shaheen-scripts/10240/: 1024-nodes-1.sh  16-nodes-1.sh  256-nodes-1.sh  4-nodes-1.sh  64-nodes-1.sh
TESTDATA/: 20outta100.txt  30outta100.txt  A_wdenseblocks.txt  A_with20x30hole.txt  create_mm.jl  duplicate_edges.txt  findrows.txt  grid3d_k5.txt  rand10outta100.txt  scale_test.sh
docs/: Limitations.md  Queries.md
examples/: rdf_to_mm.sh
examples/data/: README.md  poster.nt
examples/queries/lubm/: q1.txt  q2.txt  q3.txt  q4.txt  q5.txt  q6.txt  q7.txt
examples/queries/poster/: query.txt
include/: BFSFriends.h  DenseParMat.h  DistEdgeList.h  FileHeader.h  Friends.h  FullyDist.h  FullyDistSpVec.h  FullyDistVec.h  Header100k.h  Header10240.h  Header1T.h  MPIOp.h  Operations.h  ParFriends.h  ParFriendsExt.h  RefGen21.h  Semirings.h  SpCCols.h  SpDCCols.h  SpDefs.h  SpHelper.h  SpImpl.h  SpMat.h  SpParHelper.h  SpParMat.h  SpTuples.h  ThreadedFriends.h  VecIterator.h  csc.h  dcsc.h
magiq_include/: magiqScal.h  parser.cc  utils.h
magiq_src/: CMakeLists.txt  magiqParse.cc  magiqScal.cpp
parser/: Makefile  README.md  data.txt
parser/config/: lexer.l  parser.y
parser/src/: main.cc
pmergesort/: test_pmergesort  test_pmergesort.cc
pmergesort/src/: pmergesort.c
pmergesort/test_on_shaheen/: run.out
report/: CLion-debug.md  GetLocalDCSC.md  Lubm10240-L5-ResGen.md  MPI-reduction.md  Optimization.md  Reminder.md  Report1.md  Report2.md  Report3.md  Result-generation.md  Shaheen-result.md  Shaheen-run.md  Shaheen-usage.md  Wukong-Shaheen.md  Wukong-local.md  commication-16processes.txt
run/: 100k-nodes1024-cores4096.sh  10240-l2.sh  10240-l7-nodes16.sh  10240-l7.sh  10240-nodes0004-cores0064.sh  10240-nodes0016-cores0256.sh  10240-nodes0064-cores1024.sh  10240-nodes8.sh  check.sh  crun.sh  getdcsc-1.sh  getdcsc-2.sh  getdcsc-3.sh  lubm320_l2.sh  lubm320_l7.sh  old-run-100k.sh  reduct-1.sh
selfInclude/: HeaderScal.h
selfTests/: CMakeLists.txt  CollectTest.cpp  Construct_SpMat.cpp  EXP_ReduceAdd.cpp  GetDCSCTest.cpp  GridTest.cpp  Lubm100k.cpp  Lubm10240.cpp  Lubm10240_Encoded.cpp  Lubm10240_L1_ResGen.cpp  Lubm10240_L2.cpp  Lubm10240_L2_ResGen.cpp  Lubm10240_L4_ResGen.cpp  Lubm10240_L5_ResGen.cpp  Lubm10240_L6_ResGen.cpp  Lubm10240_L7.cpp  Lubm10241.cpp  Lubm1T_Encoded.1.cpp  Lubm1T_Encoded.cpp  Lubm320_L2.cpp  Lubm320_L7.cpp  LubmScal.cpp  OperationsTiming.cpp  Pair_FullyDistVec.cpp  Permute_Test.cpp  PruneTest.cpp  Query2.cpp  Query7.cpp  ReduceAdd.cpp  ReductionTest.cpp  ResGen2.cpp  SemiringMult.cpp  SendRecvTest.cpp  SpIntersectTest.cpp  SpMult.cpp  SpRefTest.cpp  Test_Asgn.cpp  new100k.cpp  utils.cpp
src/: CommGrid.cpp  DenseParMat.cpp  DistEdgeList.cpp  FullyDistSpVec.cpp  FullyDistVec.cpp  MPIOp.cpp  MPIType.cpp  MemoryPool.cpp  SpCCols.cpp  SpDCCols.cpp  SpImpl.cpp  SpMat.cpp  SpParHelper.cpp  SpParMat.cpp  SpTuples.cpp  csc.cpp  dcsc.cpp  mmio.c
