# Top level directory has the include files

#ADD_EXECUTABLE( spmult SpMult.cpp )
#ADD_EXECUTABLE( timing OperationsTiming.cpp )
#ADD_EXECUTABLE( semiringmult SemiringMult.cpp )
#ADD_EXECUTABLE( reduceadd ReduceAdd.cpp )
#ADD_EXECUTABLE( utils utils.cpp)
#ADD_EXECUTABLE( constructmat Construct_SpMat.cpp)
#ADD_EXECUTABLE( test_asgn Test_Asgn.cpp)
#ADD_EXECUTABLE( exp_reduceadd EXP_ReduceAdd.cpp)
#ADD_EXECUTABLE( prune_mat PruneTest.cpp )
#ADD_EXECUTABLE( lubm320_l2 Lubm320_L2.cpp)
#ADD_EXECUTABLE( lubm320_l7 Lubm320_L7.cpp)
#ADD_EXECUTABLE( permute Permute_Test.cpp)
ADD_EXECUTABLE( lubm10240 Lubm10240.cpp ../include/Header10240.h)
#ADD_EXECUTABLE( lubm100k Lubm100k.cpp ../include/Header100k.h)
#ADD_EXECUTABLE( pair Pair_FullyDistVec.cpp)
#ADD_EXECUTABLE( spref SpRefTest.cpp)
#ADD_EXECUTABLE( collect CollectTest.cpp)
#ADD_EXECUTABLE( resgen2 ResGen2.cpp)
#ADD_EXECUTABLE( getdcsc GetDCSCTest.cpp)
#ADD_EXECUTABLE( isect SpIntersectTest.cpp)
#ADD_EXECUTABLE( grid GridTest.cpp)
#ADD_EXECUTABLE( sendrecv SendRecvTest.cpp)
#ADD_EXECUTABLE( reduct ReductionTest.cpp)
#ADD_EXECUTABLE( l5resgen Lubm10240_L5_ResGen.cpp ../include/Header10240.h)
ADD_EXECUTABLE( l2resgen Lubm10240_L2_ResGen.cpp ../include/Header10240.h)
#ADD_EXECUTABLE( l6resgen Lubm10240_L6_ResGen.cpp ../include/Header10240.h)
ADD_EXECUTABLE( l1resgen Lubm10240_L1_ResGen.cpp ../include/Header10240.h)
ADD_EXECUTABLE( l4resgen Lubm10240_L4_ResGen.cpp ../include/Header10240.h)

#TARGET_LINK_LIBRARIES( spmult CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( timing CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( semiringmult CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( reduceadd CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( utils CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( constructmat CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( test_asgn CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( exp_reduceadd CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( prune_mat CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( lubm320_l2 CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( lubm320_l7 CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
TARGET_LINK_LIBRARIES( lubm10240 CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( lubm100k CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( permute CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( pair CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( spref CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( collect CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( resgen2 CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( getdcsc CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( isect CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( grid CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( sendrecv CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( reduct CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( l5resgen CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
TARGET_LINK_LIBRARIES( l2resgen CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
#TARGET_LINK_LIBRARIES( l6resgen CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
TARGET_LINK_LIBRARIES( l1resgen CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
TARGET_LINK_LIBRARIES( l4resgen CommGridlib MPITypelib MemoryPoollib Hashlib mmiolib)
